--- a/templates/frame/assets/stylus/responsive.styl
+++ b/templates/frame/assets/stylus/responsive.styl
@@ -60,7 +60,8 @@
 			width 500px
 			margin 0 auto
 		&-link
-			padding .3em 2em
+			font-size 2em
+			padding .3em 1em
 			
 
 @media only screen and (min-width: 980px)
@@ -160,6 +161,7 @@
 	.build-fast
 	.build-smart
 	.build-green
+	.framing
 	.offer
 	.project
 		text-align left
