--- a/templates/frame/assets/css/main.css
+++ b/templates/frame/assets/css/main.css
@@ -871,7 +871,7 @@ input[type="submit"] {
 .bgid-102 .projects {
   margin-top: -25px;
 }
-.bgid-105 .framing {
+.bgid-105 .framing-difference {
   margin-top: -25px;
 }
 .bgid-107 .offers {
