--- a/templates/frame/assets/stylus/main.styl
+++ b/templates/frame/assets/stylus/main.styl
@@ -313,7 +313,7 @@ button,input[type="submit"]
 	.projects
 		margin-top -25px
 .bgid-105
-	.framing
+	.framing-difference
 		margin-top -25px
 				
 .bgid-107
