--- a/templates/frame/css/bundle.css
+++ b/templates/frame/css/bundle.css
@@ -365,7 +365,7 @@ button,input[type=submit]{background:rojo;border:none;clear:both;color:#fff;curs
 .main .rightSection{padding:1em;color:#000;width:100%}
 .main .leftSection{width:100%}
 .bgid-101 .main{min-height:0}
-.bgid-102 .projects,.bgid-105 .framing,.bgid-107 .offers{margin-top:-25px}
+.bgid-102 .projects,.bgid-105 .framing-difference,.bgid-107 .offers{margin-top:-25px}
 .benefits-tabs,.green-build{overflow:hidden}
 .benefits-tabs ul{margin:0;padding:0;list-style:none}
 .benefits-tabs li{display:inline-block;vertical-align:top;background-color:#446a8d;cursor:pointer;color:#fff;padding:.3em;margin-bottom:.5em}
