--- a/templates/frame/assets/stylus/responsive.styl
+++ b/templates/frame/assets/stylus/responsive.styl
@@ -41,8 +41,12 @@
 					transition opacity 0.5s, transform 0.5s
 				p///.projects-description
 					transition background-color 0.5s, opacity 0.5s 0.2s, transform 0.5s 0.2s	
-	
-		
+	.services
+	.difference
+		.projects
+			&-link
+				&:hover
+					background-color transparent
 	.footer
 		&-logo
 			float left 
@@ -207,7 +211,8 @@
 
 	.header
 		&-logo
-			margin-right 20px
+			width 250px
+			margin-right 0
 		&-contactCall
 			display block
 
