se agrego marca de agua a los cuadros

--- a/templates/frame/assets/css/main.css
+++ b/templates/frame/assets/css/main.css
@@ -1000,6 +1000,7 @@ input[type="submit"] {
   list-style: none;
   overflow: hidden;
   clear: both;
+  background: url("../img/bg_portafolio.png");
 }
 .framing-item,
 .offer-item,
