--- a/templates/frame/assets/stylus/main.styl
+++ b/templates/frame/assets/stylus/main.styl
@@ -445,6 +445,7 @@ button,input[type="submit"]
 		list-style none
 		overflow hidden
 		clear both
+		background url('../img/bg_portafolio.png')
 
 	&-item
 		//float left
