--- a/templates/frame/css/bundle.css
+++ b/templates/frame/css/bundle.css
@@ -391,7 +391,7 @@ button,input[type=submit]{background:rojo;border:none;clear:both;color:#fff;curs
 .home-item h3{font-weight:500}
 .home-segments{margin-top:1em}
 .home-segment{display:inline-block;padding:0 2em}
-.framing-container,.framing-items,.offer-container,.offer-items,.projects-container,.projects-items{list-style:none;overflow:hidden;clear:both}
+.framing-container,.framing-items,.offer-container,.offer-items,.projects-container,.projects-items{list-style:none;overflow:hidden;clear:both;background:url(../img/bg_portafolio.png)}
 .framing-item,.offer-item,.projects-item{width:100%;line-height:0;position:relative}
 .framing-item.default h4,.framing-item.featured h4,.offer-item.default h4,.offer-item.featured h4,.projects-item.default h4,.projects-item.featured h4{font-size:2em}
 .framing-link,.offer-link,.projects-link{display:inline-block;position:absolute;top:0;left:0;width:100%;height:100%;background-color:rgba(0,0,0,.5);opacity:1;-ms-filter:none;filter:none;-webkit-transition:background .5s .5s,opacity .5s .5s;-moz-transition:background .5s .5s,opacity .5s .5s;-o-transition:background .5s .5s,opacity .5s .5s;-ms-transition:background .5s .5s,opacity .5s .5s;transition:background .5s .5s,opacity .5s .5s}
